adjusted influxdb feature to accomodate ediplugs data

--- a/config.sample
+++ b/config.sample
@@ -95,6 +95,9 @@ fields=pconsume,psupply,p1consume,p2consume,p3consume,p1supply,p2supply,p3supply
 pvmeasurement=SMAWR
 pvfields=AC Power,grid frequency,DC input voltage,daily yield,total yield,Power L1,Power L2,Power L3
 
+#ediplugs
+edimeasurement=edimax
+
 [FEATURE-pvdata]
 
 # How frequently to send updates over (defaults to 20 sec)
